--- a/mssc-restdocs-example/pom.xml
+++ b/mssc-restdocs-example/pom.xml
@@ -127,6 +127,9 @@
 						<compilerArg>
 							-Amapstruct.defaultComponentModel=spring
 						</compilerArg>
+						<compilerArg>
+							-Amapstruct.verbose=true
+						</compilerArg>
 					</compilerArgs>
 				</configuration>
 			</plugin>
